@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_lua: Add r:wspeek for checking if there is any data waiting on the line
+     [Daniel Gruno]
+
   *) mod_proxy_wstunnel: Avoid busy loop on client errors, drop message
      IDs 02445, 02446, and 02448 to TRACE1 from DEBUG. PR 56145.
      [Joffroy Christen <joffroy.christen solvaxis com>, Eric Covener]
